Fix dark mode background-color style for Editor/Handle theme component.

--- a/src/theme/Editor/Handle/styles.module.css
+++ b/src/theme/Editor/Handle/styles.module.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 100%;
 
-    background-color: var(--ifm-color-emphasis-100);
+    background-color: var(--ifm-pre-background);
     transition: background-color 0.2s;
 }
 
